--- a/distribution.html
+++ b/distribution.html
@@ -45,7 +45,7 @@
             <!-- 品項swiper -->
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><a href="">全部｜All</a></div>
+                <div class="swiper-slide"><a href="" class="all">全部｜All</a></div>
                 <div class="swiper-slide"><a href="">零食｜Snack</a></div>
                 <div class="swiper-slide"><a href="">冰品｜Ice</a></div>
                 <div class="swiper-slide"><a href="">飲品｜Drink</a></div>
@@ -326,7 +326,7 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 4,
-        spaceBetween: -40,
+        spaceBetween: 0,
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
