pop-window-test

--- a/distribution.html
+++ b/distribution.html
@@ -86,7 +86,7 @@
                   </div>
                   <div class="yellow-box"><img src="/img/add_for_ask.svg" alt="黃色詢問框"></div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
+                    <a href="./popwindow.html"  class="yellow-box-hover"><img src="/img/add_for_ask_hover.svg" alt="黃色詢問框hover"></a>
                     <a href="" class="product-background-hover-more">MORE</a>
                   </div>
                 </div> 
@@ -363,5 +363,9 @@
 
     <!-- footer -->
     <footer></footer>
+
+
+    <!-- pop-windowJs -->
+    <!-- <script src="./js/distribution.js"></script> -->
   </body>
 </html>
