--- a/distribution.html
+++ b/distribution.html
@@ -29,7 +29,7 @@
           <div class="distribution-nav">
             <div class="distribution-logo-group">
               <div class="distribution-logo-img">
-                <img src="/img/distribution.svg" alt="" />
+                <img src="/img/distribution.svg" alt="產品經銷logo" />
               </div>
               <div class="distribution-logo-text">
                 <div class="distribution-logo-text-cn">產品經銷</div>
@@ -53,10 +53,10 @@
                 <div class="swiper-slide"><a href="">甜點｜dessert</a></div>
               </div>
               <div class="swiper-button-next">
-                <img src="/img/commodity-next.svg" alt="">
+                <img src="/img/commodity-next.svg" alt="下一個按鈕">
               </div>
               <div class="swiper-button-prev">
-                <img src="/img/commodity-prev.svg" alt="">
+                <img src="/img/commodity-prev.svg" alt="上一個按鈕">
               </div>
             </div>
             <!-- 頁面數 -->
