distrbution-swiper red更新

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -59,24 +59,24 @@
                             </div>
                             <button type="button" class="delete-all btn">全部刪除</button>
 
+                            <ul class="pagination-top">
+                                <li class="page-item-prev">
+                                    <a class="page-link" href="">
+                                        <img src="./images/distribution-confirm/icon/previous.png" alt="">
+                                        上一頁
+                                    </a>
+                                </li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="">1</a>
+                                </li>
+                                <li class="page-item-next">
+                                    <a class="page-link" href="">
+                                        下一頁
+                                        <img src="./images/distribution-confirm/icon/next.png" alt="">
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="pagination-top">
-                            <li class="page-item-prev">
-                                <a class="page-link" href="">
-                                    <img src="./images/distribution-confirm/icon/previous.png" alt="">
-                                    上一頁
-                                </a>
-                            </li>
-                            <li class="page-item active">
-                                <a class="page-link" href="">1</a>
-                            </li>
-                            <li class="page-item-next">
-                                <a class="page-link" href="">
-                                    下一頁
-                                    <img src="./images/distribution-confirm/icon/next.png" alt="">
-                                </a>
-                            </li>
-                        </ul>
                     </div>
                     <hr class="distribution-line">
                     <div class="content-area">
@@ -196,7 +196,7 @@
                                     甜點 | dessert
                                 </div>
                             </div>
-                            <div class="direction-body">
+                            <!-- <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
                                         src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
@@ -218,7 +218,7 @@
                                 <div class="commodity-sort">
                                     冰品 | Ice
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <hr class="distribution-line-down">
