confrim頁結構變更

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -23,14 +23,16 @@
             <!-- 佑 產品經銷項目確認 -->
             <section id="distribution-confirm">
                 <div class="container">
-                    <div class="title-area">
-                        <div class="title">
-                            <div class="title-img"></div>
-                            <div class="title-text">
-                                <div class="title-text-top">經銷商品確認</div>
-                                <div class="title-text-bottom">DISTRIBUTION</div>
-                            </div>
+                    <div class="title">
+                        <div class="title-img"></div>
+                        <div class="title-text">
+                            <div class="title-text-top">經銷商品確認</div>
+                            <div class="title-text-bottom">DISTRIBUTION</div>
                         </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="title-area">
                         <div class="tiger-sugar-img-area">
                             <img class="tiger-sugar-img" src="./images/distribution-confirm/bg/join_us.png" alt="">
                         </div>
@@ -252,6 +254,8 @@
                             <div class="title-text-bottom">DISTRIBUTION</div>
                         </div>
                     </div>
+                </div>
+                <div class="container">
                     <form action="">
                         <div class="basic-fillout">
                             <div class="fill-title">經銷商基本資料填寫</div>
