--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -22,7 +22,7 @@
         <div id="distribution-container">
             <!-- 佑 產品經銷項目確認 -->
             <section id="distribution-confirm">
-                <div class="container">
+                <div class="title-container">
                     <div class="title">
                         <div class="title-img"></div>
                         <div class="title-text">
@@ -246,7 +246,7 @@
 
             <!-- 夫 資料填寫 -->
             <section id="fillout-area">
-                <div class="container">
+                <div class="title-container">
                     <div class="title">
                         <div class="title-img"></div>
                         <div class="title-text">
