--- a/popwindow.html
+++ b/popwindow.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="swiper swiper-pop-top my-pop-swiper-sub swiper-style">
                             <div class="swiper-wrapper">
-                                <div class="swiper-pop-top-slide swiper-slide">
+                                <div class="swiper-slide swiper-pop-top-slide">
                                     <img src="./img/sesamebun1.jpeg" />
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
