--- a/distribution.html
+++ b/distribution.html
@@ -43,22 +43,25 @@
           <!-- 各品項與頁面數swiper -->
           <div class="swiper-and-page-group">
             <!-- 品項swiper -->
-            <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide"><a href="" class="all">全部｜All</a></div>
-                <div class="swiper-slide"><a href="">零食｜Snack</a></div>
-                <div class="swiper-slide"><a href="">冰品｜Ice</a></div>
-                <div class="swiper-slide"><a href="">飲品｜Drink</a></div>
-                <div class="swiper-slide"><a href="">食品｜Food</a></div>
-                <div class="swiper-slide"><a href="">甜點｜dessert</a></div>
-              </div>
-              <div class="swiper-button-next">
-                <img src="/img/commodity-next.svg" alt="下一個按鈕">
-              </div>
-              <div class="swiper-button-prev">
-                <img src="/img/commodity-prev.svg" alt="上一個按鈕">
+            <div class="commodity_area">
+              <div class="mySwiper swiper-container swiper-container-horizontal">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><a href="" class="page-link">全部｜All</a></div>
+                  <div class="swiper-slide"><a href="" class="page-link">零食｜Snack</a></div>
+                  <div class="swiper-slide"><a href="" class="page-link">冰品｜Ice</a></div>
+                  <div class="swiper-slide"><a href="" class="page-link">飲品｜Drink</a></div>
+                  <div class="swiper-slide"><a href="" class="page-link">食品｜Food</a></div>
+                  <div class="swiper-slide"><a href="" class="page-link">甜點｜dessert</a></div>
+                </div>
+                <div class="swiper-button-next">
+                  <img src="/img/commodity-next.svg" alt="下一個按鈕">
+                </div>
+                <div class="swiper-button-prev">
+                  <img src="/img/commodity-prev.svg" alt="上一個按鈕">
+                </div>
               </div>
             </div>
+            
             <!-- 頁面數 -->
             <div class="page-up-and-page-down-group">
               <a href="" class="page-up">
@@ -326,7 +329,7 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 4,
-        spaceBetween: -50,
+        spacebetween:0,
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
