--- a/distribution.html
+++ b/distribution.html
@@ -43,7 +43,7 @@
           <!-- 各品項與頁面數swiper -->
           <div class="swiper-and-page-group">
             <!-- 品項swiper -->
-            <div class="commodity_area">
+            <div class="content">
               <div class="mySwiper swiper-container swiper-container-horizontal">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide"><a href="" class="page-link">全部｜All</a></div>
@@ -329,7 +329,6 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 4,
-        spacebetween:0,
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
