confirm頁的連結替代文字完成

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="title-area">
                         <div class="tiger-sugar-img-area">
-                            <img class="tiger-sugar-img" src="./images/distribution-confirm/bg/join_us.png" alt="">
+                            <img class="tiger-sugar-img" src="./images/distribution-confirm/bg/join_us.png" alt="老虎堂logo">
                         </div>
                         <div class="distribution-check">商品經銷項目確認</div>
                         <div class="title-bottom">
@@ -49,12 +49,12 @@
                                 <div class="swiper-button-distribution-container">
                                     <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
                                         aria-controls="swiper-wrapper-53fd5a51ba467ec1" aria-disabled="false">
-                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="">
+                                        <img class="next-prev-img" src="./img/commodity-next.svg" alt="下一區品項按鈕">
                                     </div>
                                     <div class="swiper-button-prev" tabindex="0" role="button"
                                         aria-label="Previous slide" aria-controls="swiper-wrapper-53fd5a51ba467ec1"
                                         aria-disabled="false">
-                                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="">
+                                        <img class="next-prev-img" src="./img/commodity-prev.svg" alt="上一區品項按鈕">
                                     </div>
                                 </div>
                             </div>
@@ -62,18 +62,18 @@
 
                             <ul class="pagination-top">
                                 <li class="page-item-prev">
-                                    <a class="page-link" href="">
-                                        <img src="./images/distribution-confirm/icon/previous.png" alt="">
+                                    <a class="page-link" href="" title="前往上一頁購物車列表">
+                                        <img src="./images/distribution-confirm/icon/previous.png" alt="上一頁按鈕">
                                         上一頁
                                     </a>
                                 </li>
                                 <li class="page-item active">
-                                    <a class="page-link" href="">1</a>
+                                    <a class="page-link" href="" title="前往第1頁購物車列表">1</a>
                                 </li>
                                 <li class="page-item-next">
-                                    <a class="page-link" href="">
+                                    <a class="page-link" href="" title="前往下一頁購物車列表">
                                         下一頁
-                                        <img src="./images/distribution-confirm/icon/next.png" alt="">
+                                        <img src="./images/distribution-confirm/icon/next.png" alt="下一頁按鈕">
                                     </a>
                                 </li>
                             </ul>
@@ -85,12 +85,12 @@
                             <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
-                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
+                                        src="./images/product/1668998205a2557a7b2e94197ff767970b67041697.jpg" alt="商品圖片">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="移除已加商品">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="移除已加商品">
+                                        <a href="" class="commodity-more-button btn-more" title="獲取獲取商品規格資訊">
                                             MORE
                                         </a>
                                     </div>
@@ -108,12 +108,12 @@
                             <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
-                                        src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
+                                        src="./images/product/165899031442a0e188f5033bc65bf8d78622277c4e.jpg" alt="商品圖片">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="移除已加商品">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="移除已加商品">
+                                        <a href="" class="commodity-more-button btn-more" title="獲取商品規格資訊">
                                             MORE
                                         </a>
                                     </div>
@@ -131,12 +131,12 @@
                             <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
-                                        src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
+                                        src="./images/product/165899100742a0e188f5033bc65bf8d78622277c4e.jpg" alt="商品圖片">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="移除已加商品">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="移除已加商品">
+                                        <a href="" class="commodity-more-button btn-more" title="獲取商品規格資訊">
                                             MORE
                                         </a>
                                     </div>
@@ -154,12 +154,12 @@
                             <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
-                                        src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
+                                        src="./images/product/1658908734cfecdb276f634854f3ef915e2e980c31.jpg" alt="商品圖片">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="移除已加商品">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="移除已加商品">
+                                        <a href="" class="commodity-more-button btn-more" title="獲取商品規格資訊">
                                             MORE
                                         </a>
                                     </div>
@@ -177,12 +177,12 @@
                             <div class="direction-body">
                                 <div class="img-hover">
                                     <img class="product-img"
-                                        src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
+                                        src="./images/product/16589912415878a7ab84fb43402106c575658472fa.jpg" alt="商品圖片">
+                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="移除已加商品">
                                     <div class="product-img-hover">
                                         <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
+                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="移除已加商品">
+                                        <a href="" class="commodity-more-button btn-more" title="獲取商品規格資訊">
                                             MORE
                                         </a>
                                     </div>
@@ -197,46 +197,23 @@
                                     甜點 | dessert
                                 </div>
                             </div>
-                            <!-- <div class="direction-body">
-                                <div class="img-hover">
-                                    <img class="product-img"
-                                        src="./images/product/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg" alt="">
-                                    <img class="ask-icon" src="./images/distribution-confirm/icon/delete.svg" alt="">
-                                    <div class="product-img-hover">
-                                        <img class="ask-icon-hover"
-                                            src="./images/distribution-confirm/icon/delete_hover.svg" alt="">
-                                        <a href="" class="commodity-more-button btn-more">
-                                            MORE
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="commodity-title">
-                                    老虎芝士流心雪糕
-                                </div>
-                                <div class="commodity-title-english">
-                                    Tiger Cheese Filling Black Sugar Ice Cream Bar
-                                </div>
-                                <div class="commodity-sort">
-                                    冰品 | Ice
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                     <hr class="distribution-line-down">
                     <ul class="pagination-down">
                         <li class="page-item-prev">
-                            <a class="page-link" href="">
-                                <img src="./images/distribution-confirm/icon/previous.png" alt="">
+                            <a class="page-link" href="" title="前往上一頁購物車列表">
+                                <img src="./images/distribution-confirm/icon/previous.png" alt="上一頁按鈕">
                                 上一頁
                             </a>
                         </li>
                         <li class="page-item active">
-                            <a class="page-link" href="">1</a>
+                            <a class="page-link" href="" title="前往第1頁購物車列表">1</a>
                         </li>
                         <li class="page-item-next">
-                            <a class="page-link" href="">
+                            <a class="page-link" href="" title="前往下一頁購物車列表">
                                 下一頁
-                                <img src="./images/distribution-confirm/icon/next.png" alt="">
+                                <img src="./images/distribution-confirm/icon/next.png" alt="下一頁按鈕">
                             </a>
                         </li>
                     </ul>
@@ -343,7 +320,7 @@
             </div>
             <div class="franchisee-container-big">
                 <div class="franchisee-container-animation" data-aos="zoom-in">
-                    <a href="" class="franchisee-link">
+                    <a href="" class="franchisee-link" title="前往加盟頁">
                         <div class="join-us-img">
                             <div class="join-us-info">
                                 <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i
