--- a/popwindow.html
+++ b/popwindow.html
@@ -37,6 +37,7 @@
                                 <div class="swiper-pop-top-slide swiper-slide">
                                     <img src="./img/sesamebun1.jpeg" />
                                 </div>
+
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <img src="./img/sesamebun2.jpeg" />
                                 </div>
@@ -50,17 +51,26 @@
                         </div>
                         <div class="swiper swiper-pop-top my-pop-swiper-sub swiper-style">
                             <div class="swiper-wrapper">
+
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./img/sesamebun1.jpeg" />
+                                    <div class="pop-sub-border-img">
+                                        <img class="sub-img" src="./img/sesamebun1.jpeg" />
+                                    </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./img/sesamebun2.jpeg" />
+                                    <div class="pop-sub-border-img">
+                                        <img class="sub-img" src="./img/sesamebun2.jpeg" />
+                                    </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./img/sesamebun3.jpeg" />
+                                    <div class="pop-sub-border-img">
+                                        <img class="sub-img" src="./img/sesamebun3.jpeg" />
+                                    </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./img/sesamebun4.jpeg" />
+                                    <div class="pop-sub-border-img">
+                                    <img class="sub-img" src="./img/sesamebun4.jpeg" />
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-button-next">
