--- a/distribution.html
+++ b/distribution.html
@@ -49,22 +49,22 @@
               >
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <a href="" class="page-link">全部｜All</a>
+                    <a href="" title="品項分類" class="page-link">全部｜All</a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="" class="page-link">零食｜Snack</a>
+                    <a href="" title="品項分類" class="page-link">零食｜Snack</a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="" class="page-link">冰品｜Ice</a>
+                    <a href="" title="品項分類" class="page-link">冰品｜Ice</a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="" class="page-link">飲品｜Drink</a>
+                    <a href="" title="品項分類" class="page-link">飲品｜Drink</a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="" class="page-link">食品｜Food</a>
+                    <a href="" title="品項分類" class="page-link">食品｜Food</a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="" class="page-link">甜點｜dessert</a>
+                    <a href="" title="品項分類" class="page-link">甜點｜dessert</a>
                   </div>
                 </div>
                 <div class="swiper-button-next">
@@ -78,15 +78,15 @@
 
             <!-- 頁面數 -->
             <div class="page-up-and-page-down-group">
-              <a href="" class="page-up">
+              <a href="" class="page-up" title="上一個頁面">
                 <img src="/img/previous.png" alt="上一頁小圖標" />上一頁</a
               >
-              <a href="" class="page-1">1</a>
-              <a href="" class="page-2">2</a>
-              <a href="" class="page-3">3</a>
-              <a href="" class="page-4">4</a>
-              <a href="" class="page-5">5</a>
-              <a href="" class="page-down"
+              <a href="" class="page-1" title="第一頁">1</a>
+              <a href="" class="page-2" title="第二頁">2</a>
+              <a href="" class="page-3" title="第三頁">3</a>
+              <a href="" class="page-4" title="第四頁">4</a>
+              <a href="" class="page-5" title="第五頁">5</a>
+              <a href="" class="page-down" title="下一個頁面"
                 >下一頁
                 <img src="/img/next.png" alt="下一頁小圖標" />
               </a>
@@ -112,7 +112,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -138,12 +138,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -168,12 +168,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -198,12 +198,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -228,12 +228,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -258,12 +258,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -288,12 +288,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -318,12 +318,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -349,12 +349,12 @@
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
                   <div class="product-background-hover">
-                    <a href="" class="yellow-box-hover"
+                    <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more">MORE</a>
+                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
                   </div>
                 </div>
               </div>
@@ -374,15 +374,15 @@
           <!-- 頁面數 -->
 
           <div class="page-up-and-page-down-group-buttom">
-            <a href="" class="page-up">
+            <a href="" class="page-up" title="上一個頁面">
               <img src="/img/previous.png" alt="上一頁小圖標" />上一頁</a
             >
-            <a href="" class="page-1">1</a>
-            <a href="" class="page-2">2</a>
-            <a href="" class="page-3">3</a>
-            <a href="" class="page-4">4</a>
-            <a href="" class="page-5">5</a>
-            <a href="" class="page-down"
+            <a href="" class="page-1" title="第一頁">1</a>
+            <a href="" class="page-2" title="第二頁">2</a>
+            <a href="" class="page-3" title="第三頁">3</a>
+            <a href="" class="page-4" title="第四頁">4</a>
+            <a href="" class="page-5" title="第五頁">5</a>
+            <a href="" class="page-down" title="下一個頁面"
               >下一頁
               <img src="/img/next.png" alt="下一頁小圖標" />
             </a>
@@ -437,7 +437,7 @@
         </div>
         <div class="franchisee-container-big">
           <div class="franchisee-container-animation" data-aos="zoom-in">
-            <a href="" class="franchisee-link">
+            <a href="" class="franchisee-link" title="點擊立即加盟按鈕">
               <div class="join-us-img">
                 <div class="join-us-info">
                   <h2>
